--- a/style.css
+++ b/style.css
@@ -513,6 +513,10 @@ nav {
     margin-bottom: 60px;
 }
 
+.project {
+    margin-bottom: 128px;
+}
+
 .project__img {
     width: 100%;
     transition: all 600ms ease;
