--- a/style.css
+++ b/style.css
@@ -206,6 +206,21 @@ nav,
     padding: 0 30px;
 }
 
+.header__content {
+    animation: animate-header 750ms ease;
+}
+
+@keyframes animate-header {
+    0% {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
 .header__para {
     font-size: 24px;
     line-height: 2;
